--- a/css/photographer.css
+++ b/css/photographer.css
@@ -48,17 +48,7 @@ p{
     margin-top: -10px;
 }
 .contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 80px;
+    
     display: none;
 }
 .contact_buttons {
@@ -73,7 +63,6 @@ p{
     border-radius: 5px;
     cursor: pointer;
     margin: 80px;
-    
 }
 .photographer_image{
     margin-right: 50px;
@@ -84,6 +73,11 @@ p{
     height: 150px;
     object-fit: cover;
     box-shadow: 0 0 0 0.5;
+}
+div .gallery{
+    width: 100%;
+    height: 100px;
+    border:2px solid pink;
 }
 .modal {
     border-radius: 5px;
@@ -137,4 +131,26 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+.menu_dropdown{
+    display: flex;
+    align-items: center;
+    width: 300px;
+    border:2px solid magenta;
+    justify-content: center;
+    margin-left: 100px;
+
+}
+.dropdown{
+    background-color: #901C1C;
+    width: 200px;
+    color:white;
+}
+.photograph_lightbox{
+    height: 100px;
+    border:2px solid red;
+}
+.lightbox_wrapper{
+    height: 100px;
+    background-color:yellow;
 }
