--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,29 +1,35 @@
 #contact_modal {
     display: none;
 }
+#photos{
+    width: 100%;
+    height: 300px;
+    border:3px solid green;
+    margin-bottom: 100px;
+}
 .logo{
     height: 50px;
     width: 150px;
     margin-left: 10px;
     margin-top: 10px;
 }
-main{
+.container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 .container_header_photographer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 313px;
-    margin: 0 10px;
+    margin: 0 auto;
 }
 
-#photographer-card {
-   height: 300px;
+#photographer_card_header {
+    height: 200px;
     margin: 0 10px;
     width: 100%;
     padding-top: 5px;
+    background-color:#f2f2f2;
 }
 .photographer_info{
     display: flex;
@@ -74,11 +80,7 @@ p{
     object-fit: cover;
     box-shadow: 0 0 0 0.5;
 }
-div .gallery{
-    width: 100%;
-    height: 100px;
-    border:2px solid pink;
-}
+
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
@@ -87,13 +89,14 @@ div .gallery{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 35px;
+    padding-top: 35px;
     margin: auto;
 }
 
 .modal header {
     justify-content: space-between;
     width: 100%;
+    color:black;
 }
 
 .modal header img {
@@ -101,9 +104,10 @@ div .gallery{
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 36px;
     font-weight: normal;
     text-align: center;
+    color:black;
 }
 
 form {
@@ -132,25 +136,72 @@ form input {
     border: none;
     border-radius: 5px;
 }
+
 .menu_dropdown{
     display: flex;
-    align-items: center;
-    width: 300px;
-    border:2px solid magenta;
-    justify-content: center;
-    margin-left: 100px;
-
+    margin-left: 10px;
+    margin-top: 20px;
 }
-.dropdown{
+.titre_menu{
+    font-size: 20px;
+    font-weight: bolder;
+}
+.dropbtn{
     background-color: #901C1C;
+    color: white;
+    padding: 16px 26px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin-left: 5px;
     width: 200px;
+  }
+  options{
+      background-color: #901C1C;
+      display: block;
+      font-size: 16px;
+      padding: 16px;
+      text-align: center;
+      width: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
+  
+  .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #901C1C;
+    overflow: auto;
     color:white;
+    z-index: 1;
+    overflow: hidden;
+    text-align: center;
+  }
+  
+  .show {display: block;
+    background-color: #901C1C;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 16px 26px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin-left: 5px;
+    width: 200px;
+    justify-content: center;
+    text-align: center;
 }
-.photograph_lightbox{
-    height: 100px;
-    border:2px solid red;
-}
-.lightbox_wrapper{
-    height: 100px;
-    background-color:yellow;
+#box{
+    
+    border:2px solid green;
 }
