--- a/css/photographer.css
+++ b/css/photographer.css
@@ -7,6 +7,11 @@
     border:3px solid green;
     margin-bottom: 100px;
 }
+.wrapper_gallery{
+    width: 100%;
+    height:400px;
+    
+}
 .logo{
     height: 50px;
     width: 150px;
