--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,24 +1,15 @@
 #contact_modal {
     display: none;
 }
-#photos{
-    width: 100%;
-    height: 300px;
-    border:3px solid green;
-    margin-bottom: 100px;
-}
-.wrapper_gallery{
-    width: 100%;
-    height:400px;
-    
-}
 .logo{
     height: 50px;
     width: 150px;
-    margin-left: 10px;
+    margin-left: 30px;
     margin-top: 10px;
 }
 .container{
+    max-width: 90vw;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
@@ -28,9 +19,35 @@
     align-items: center;
     margin: 0 auto;
 }
-
-#photographer_card_header {
+#photos{
+    width: 100%;
+    height: 300px;
+    border:3px solid green;
+}
+.wrapper_gallery{
+    width: 100%;
+    height:400px;
+    display: flex;
+}
+.gallery_show{
+    width: 200px;
     height: 200px;
+    border:2px solid yellow;
+    position: relative;
+}
+.wrapper_like{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 220px;
+}
+#heart img{
+    
+    width: 30px;
+    height: 30px;
+}
+#photographer_card_header {
+    display: flex;
+    justify-content: center;
     margin: 0 10px;
     width: 100%;
     padding-top: 5px;
@@ -42,6 +59,7 @@
     column-gap:2px;
     flex-wrap: wrap;
     width: 200px;
+    margin-left:-15px;
 }
 h2{
     color:#D3573C;
@@ -76,7 +94,7 @@ p{
     margin: 80px;
 }
 .photographer_image{
-    margin-right: 50px;
+    padding-left: 100px;
 }
 .photographer_image img{
     border-radius: 50%;
@@ -144,12 +162,17 @@ form input {
 
 .menu_dropdown{
     display: flex;
+    align-items: center;
     margin-left: 10px;
+    height: 50px;
     margin-top: 20px;
+    margin-bottom: 50px;
 }
 .titre_menu{
     font-size: 20px;
     font-weight: bolder;
+    margin:auto 0;
+    
 }
 .dropbtn{
     background-color: #901C1C;
@@ -207,6 +230,8 @@ form input {
     text-align: center;
 }
 #box{
-    
+    max-width: 1400px;
+    margin:0 auto;
+    padding-top: 80px;
     border:2px solid green;
 }
