--- a/css/photographer.css
+++ b/css/photographer.css
@@ -16,12 +16,15 @@
 .container_header_photographer{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+    border:2px solid red;
+    
 }
 #photos{
-    width: 100%;
-    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    max-width: 90vw;
+    margin: 0 auto;
     border:3px solid green;
 }
 .wrapper_gallery{
@@ -32,7 +35,7 @@
 .gallery_show{
     width: 200px;
     height: 200px;
-    border:2px solid yellow;
+    border:2px solid red;
     position: relative;
 }
 .wrapper_like{
@@ -41,15 +44,13 @@
     margin-top: 220px;
 }
 #heart img{
-    
     width: 30px;
     height: 30px;
 }
 #photographer_card_header {
-    display: flex;
-    justify-content: center;
+    width: 90vw;
     margin: 0 10px;
-    width: 100%;
+
     padding-top: 5px;
     background-color:#f2f2f2;
 }
@@ -59,7 +60,7 @@
     column-gap:2px;
     flex-wrap: wrap;
     width: 200px;
-    margin-left:-15px;
+
 }
 h2{
     color:#D3573C;
