--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-@import url("photographer.css");
+.logo{
+    width: 200px;
+}
 
 body {
     font-family: "DM Sans", sans-serif;
@@ -16,7 +18,6 @@ header {
 }
 h1 {
     color: #901C1C;
-    
 }
 .photographer_section {
     display: grid;
@@ -32,6 +33,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 }
 
 .photographer_section article h2 {
@@ -43,11 +45,16 @@ h1 {
 h3{
     font-family: 'DM sans serif';
     font-size: 18px;
-    padding-top: 8px;
+    margin-top: -10px;
+    color:#D3573C;
 }
 article p{
     padding: top 5px;
     font-size: 13px;
+    
+}
+.tagline{
+    font-weight: 600;
 }
 .photographer_section article img {
     height: 200px;
