--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
 .logo{
     width: 200px;
 }
-
 body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
     max-width: 1400px;
     margin:0 auto;
 }
+/*********header page d'accueil******************************/
 header {
     display: flex;
     flex-direction: row;
@@ -19,6 +24,7 @@ header {
 h1 {
     color: #901C1C;
 }
+/**********main page d'accueil****************/
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -33,14 +39,18 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
 }
-
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 28px;
     margin-top: 10px;
     font-family: 'DM sans serif';
+}
+.card_infos{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+
 }
 h3{
     font-family: 'DM sans serif';
@@ -51,7 +61,6 @@ h3{
 article p{
     padding: top 5px;
     font-size: 13px;
-    
 }
 .tagline{
     font-weight: 600;
@@ -69,6 +78,7 @@ article p{
     width: 50%;
     height: 50px;
     margin-top: -30px;
+    
 }
 .price{
     margin-top: -5px;
