--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,6 +1,7 @@
 #contact_modal {
     display: none;
 }
+/*page accueil*/
 .logo{
     height: 50px;
     width: 180px;
@@ -13,6 +14,7 @@
     display: flex;
     flex-direction: column;
 }
+/***page photographer*/
 .container_header_photographer{
     display: flex;
     justify-content: space-around;
@@ -36,20 +38,44 @@
     font-size:18px;
     font-weight: normal;
 }
+.menu_dropdown{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    height: 50px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+.titre_menu{
+    font-size: 20px;
+    font-weight: bolder;
+    margin:auto 0;
+}
+.dropbtn{
+    background-color: #901C1C;
+    color: white;
+    padding: 16px 26px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin-left: 5px;
+    width: 200px;
+  }
 .wrapper_like{
     display: flex;
     flex-direction: row;
+    gap:7px;
 }
-
+/*
 h3.photograph-catalog-like {
     font-size: 1.2em;
     margin-right: 20px;
-}
+    border:2px solid red;
+}*/
 .photo_clicked{
     display: flex;
     flex-direction: column;
     gap:10px;
-    
 }
 .medias_all{
     width: 300px;
@@ -89,7 +115,7 @@ p{
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.8);
+    background-color:white;
     top: 0;
     left: 0;
     display: none;
@@ -124,9 +150,9 @@ div.modal_media{
 }
 
 .lightbox_modal h3 {
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: #901C1C;
-    text-align: center;
+    margin-left:39.5%;
 }
 .lightbox_modal .controls {
     position: absolute;
@@ -157,15 +183,9 @@ div.modal_media{
     outline: none;
     border: 1px solid #901C1C;
 }
-
 .lightbox_modal i {
     padding: 0 20px;
 }
-
-.lightbox_modal i {
-    padding: 0 20px;
-}
-
 .lightbox_modal .modal_close_btn {
     position: absolute;
     top: 30px;
@@ -196,15 +216,22 @@ div.modal_media{
     width: 70%;
     height: 70%;
 }
-
+/*
 
 .card_lightbox{
     width: 500px;
     height: 500px;
     border:5px solid white;
-}
+    border:2px solid red;
+}*/
+
 .contact_button {
     display: none;
+}
+/*formulaire*/
+#contact_photograph{
+    width: 95%;
+    margin: 0 auto;
 }
 .contact_buttons, .submitting_form {
     font-size: 20px;
@@ -250,10 +277,6 @@ div.modal_media{
     margin-left: 40px;
     height: 30px;
 }
-#contact_photograph{
-    width: 95%;
-    margin: 0 auto;
-}
 .close_form{
     position: absolute;
     height: 30px;
@@ -268,7 +291,7 @@ form {
 }
 form label {
     color: #312E2E;
-    font-size: 36px;
+    font-size: 34px;
 }
 form div {
     display: flex;
@@ -283,46 +306,12 @@ form input {
     border: none;
     border-radius: 5px;
 }
-
-
-.menu_dropdown{
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    height: 50px;
-    margin-top: 20px;
-    margin-bottom: 50px;
+.error_msn{
+    margin-top:5px;
 }
-.titre_menu{
-    font-size: 20px;
-    font-weight: bolder;
-    margin:auto 0;
-}
-.dropbtn{
-    background-color: #901C1C;
-    color: white;
-    padding: 16px 26px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    margin-left: 5px;
-    width: 200px;
-  }
-  options{
-      background-color: #901C1C;
-      display: block;
-      font-size: 16px;
-      padding: 16px;
-      text-align: center;
-      width: 200px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-  }
+
   
-  .dropbtn:focus {
-    background-color: #2980B9;
-  }
+  
   
   .dropdown {
     position: relative;
@@ -338,27 +327,7 @@ form input {
     overflow: hidden;
     text-align: center;
   }
-  
-  .show {
-    display: block;
-    background-color: #901C1C;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    padding: 16px 26px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    margin-left: 5px;
-    width: 200px;
-    justify-content: center;
-    text-align: center;
-}
-#box{
-    max-width: 1400px;
-    margin:0 auto;
-    padding-top: 80px;
-}
+  /*ooter*/
 .footer_box{
     position:fixed;
     bottom: 0;
@@ -366,11 +335,8 @@ form input {
     width: 300px;
     height: 50px;
     background-color:#D3573C;
-    
 }
-.footer_info{
-    border:2px solid green;
-}
+
 h3.titre_like{
     color:black;
     z-index: 8888;
@@ -390,7 +356,6 @@ p.price_footer{
     margin-top: 10px;
     font-size: 1.125em;
 }
-
 #menu_dropdown .filter_images{
     display: block;
 }
